added name pic - style and about me / work experience

--- a/index.html
+++ b/index.html
@@ -13,24 +13,23 @@
     <link rel="stylesheet" href="./style/main.css" />
   </head>
   <body>
-    <!-- container for center content -->
-    <div class="wrapper">
-      <header class="items-center">
-        <div class="logo-container flex-class items-center">
+    <header>
+      <div class="container header_flex">
+        <div class="logo-block">
           <img src="./images/logo_top.svg" alt="logo" />
         </div>
-        <div class="menu-container flex-class items-center">
-          <nav class="flex-class items-center">
-            <ul class="menu-list flex-class">
-              <li>Home</li>
+        <div class="menu-feedback-container">
+          <nav>
+            <ul class="menu-list">
+              <li class="menu-item">Home</li>
               <li>About</li>
               <li>Tech Stack</li>
               <li>Projects</li>
               <li>Contact</li>
             </ul>
           </nav>
-          <div class="items-center flex-class">
-            <ul class="feedback-icons flex-class">
+          <div>
+            <ul class="feedback-icons">
               <li>
                 <a href="#">
                   <img
@@ -59,7 +58,103 @@
             </ul>
           </div>
         </div>
-      </header>
-    </div>
+      </div>
+    </header>
+    <main class="main-block">
+      <section class="container header_flex">
+        <div class="name">
+          <p>Hi &#128075;,</p>
+          <p>My name is</p>
+          <p>
+            <span>Pavan MG</span>
+          </p>
+          <p>I build things for web</p>
+        </div>
+        <div class="photo-container">
+          <img src="./images/my-photo.png" alt="my photo" />
+        </div>
+      </section>
+      <section class="about-me container header_flex">
+        <div class="description-about-me-container">
+          <h2 class="paragraph">About Me</h2>
+          <p>
+            The Generator App is an online tool that helps you to export
+            ready-made templates ready to work as your future website. It helps
+            you to combine slides, panels and other components and export it as
+            a set of static files: HTML/CSS/JS.
+          </p>
+        </div>
+      </section>
+      <section class="work-exp container header_flex">
+        <div class="work-experience-container">
+          <h2 class="paragraph">Work Experience</h2>
+          <div class="container-main-work-experience">
+            <div class="main-exp-content">
+              <div class="left-container-main-work-experience">
+                <h3>Junior Web Developer</h3>
+                <div class="div-block">
+                  <img
+                    src="./images/mdi_office-building.svg"
+                    alt="office logo"
+                  />
+                  <span class="lable-place">Dr. Rajkumar’s Learning App</span>
+                </div>
+                <img src="./images/location.svg" alt="location logo" />
+                <span>Bengaluru</span>
+              </div>
+              <div class="right-container-main-work-experience">
+                <div>
+                  <div class="period-lable">Full Time</div>
+                </div>
+                <img src="./images/calendar.svg" alt="calendar logo" />
+                <span>Sep 2021 - Dec 2021</span>
+              </div>
+            </div>
+            <div class="container-main-work-experience">
+              <div class="left-container-main-work-experience">
+                <h3>Web Development Intern</h3>
+                <div class="div-block">
+                  <img
+                    src="./images/mdi_office-building.svg"
+                    alt="office logo"
+                  />
+                  <span class="lable-place">IonPixelz Web Solutions</span>
+                </div>
+                <img src="./images/location.svg" alt="location logo" />
+                <span>Bengaluru</span>
+              </div>
+              <div class="right-container-main-work-experience">
+                <div>
+                  <div class="period-lable">Internship</div>
+                </div>
+                <img src="./images/calendar.svg" alt="calendar logo" />
+                <span>Sep 2021 - Dec 2021</span>
+              </div>
+            </div>
+            <div class="container-main-work-experience">
+              <div class="left-container-main-work-experience">
+                <h3>SEO / SEM Specialist</h3>
+                <div class="div-block">
+                  <img
+                    src="./images/mdi_office-building.svg"
+                    alt="office logo"
+                  />
+                  <span class="lable-place">HAAPS</span>
+                </div>
+                <img src="./images/location.svg" alt="location logo" />
+                <span>Bengaluru</span>
+              </div>
+              <div class="right-container-main-work-experience">
+                <div>
+                  <div class="period-lable">Internship</div>
+                </div>
+                <img src="./images/calendar.svg" alt="calendar logo" />
+                <span>Sep 2021 - Dec 2021</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
