style work experience and education

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Resume</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -86,10 +86,10 @@
         </div>
       </section>
       <section class="work-exp container header_flex">
-        <div class="work-experience-container">
+        <div>
           <h2 class="paragraph">Work Experience</h2>
-          <div class="container-main-work-experience">
-            <div class="main-exp-content">
+          <div class="description-about-me-container">
+            <div class="container-main-work-experience">
               <div class="left-container-main-work-experience">
                 <h3>Junior Web Developer</h3>
                 <div class="div-block">
@@ -100,14 +100,14 @@
                   <span class="lable-place">Dr. Rajkumar’s Learning App</span>
                 </div>
                 <img src="./images/location.svg" alt="location logo" />
-                <span>Bengaluru</span>
+                <span class="lable-place">Bengaluru</span>
               </div>
               <div class="right-container-main-work-experience">
                 <div>
-                  <div class="period-lable">Full Time</div>
+                  <div class="period-lable child righted">Full Time</div>
                 </div>
                 <img src="./images/calendar.svg" alt="calendar logo" />
-                <span>Sep 2021 - Dec 2021</span>
+                <span class="lable-place">Sep 2021 - Dec 2021</span>
               </div>
             </div>
             <div class="container-main-work-experience">
@@ -121,14 +121,14 @@
                   <span class="lable-place">IonPixelz Web Solutions</span>
                 </div>
                 <img src="./images/location.svg" alt="location logo" />
-                <span>Bengaluru</span>
+                <span class="lable-place">Bengaluru</span>
               </div>
               <div class="right-container-main-work-experience">
                 <div>
-                  <div class="period-lable">Internship</div>
+                  <div class="period-lable child righted">Internship</div>
                 </div>
                 <img src="./images/calendar.svg" alt="calendar logo" />
-                <span>Sep 2021 - Dec 2021</span>
+                <span class="lable-place">Sep 2021 - Dec 2021</span>
               </div>
             </div>
             <div class="container-main-work-experience">
@@ -142,14 +142,42 @@
                   <span class="lable-place">HAAPS</span>
                 </div>
                 <img src="./images/location.svg" alt="location logo" />
-                <span>Bengaluru</span>
+                <span class="lable-place">Bengaluru</span>
               </div>
               <div class="right-container-main-work-experience">
                 <div>
-                  <div class="period-lable">Internship</div>
+                  <div class="period-lable child righted">Internship</div>
                 </div>
                 <img src="./images/calendar.svg" alt="calendar logo" />
-                <span>Sep 2021 - Dec 2021</span>
+                <span class="lable-place">Sep 2021 - Dec 2021</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="enducation container header_flex">
+        <div class="about-me container">
+          <h2 class="paragraph">Education</h2>
+          <div class="description-about-me-container">
+            <div class="container-main-work-experience education-inner">
+              <div class="left-container-main-work-experience">
+                <h3>Bachelor in Electronics & Communication</h3>
+                <div class="div-block">
+                  <img
+                    src="./images/mdi_office-building.svg"
+                    alt="office logo"
+                  />
+                  <span class="lable-place"
+                    >Bangalore Instutute of Technology</span
+                  >
+                </div>
+              </div>
+              <div class="right-container-main-work-experience">
+                <div>
+                  <div class="period-lable child righted">Full Time</div>
+                </div>
+                <img src="./images/calendar.svg" alt="calendar logo" />
+                <span class="lable-place">Sep 2021 - Dec 2021</span>
               </div>
             </div>
           </div>
