added my tech stack

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
       </section>
       <section class="enducation container header_flex">
-        <div class="about-me container">
+        <div>
           <h2 class="paragraph">Education</h2>
           <div class="description-about-me-container">
             <div class="container-main-work-experience education-inner">
@@ -179,6 +179,59 @@
                 <img src="./images/calendar.svg" alt="calendar logo" />
                 <span class="lable-place">Sep 2021 - Dec 2021</span>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="tech-stack container">
+        <div class="about-me container">
+          <h2 class="paragraph-center">My Tech Stack</h2>
+          <h3 class="descr-tech-stack">
+            Technologies I’ve been working with recently
+          </h3>
+        </div>
+        <div class="main-stack-icon-container">
+          <div class="container-top">
+            <div class="stack-item">
+              <img src="./images/html-stack.svg" alt="html stack" />
+            </div>
+            <div class="stack-item">
+              <img src="./images/css-stack.svg" alt="css stack" />
+            </div>
+            <div class="stack-item">
+              <img src="./images/js-stack.svg" alt="java script stack" />
+            </div>
+            <div class="stack-item">
+              <img src="./images/react-stack.svg" alt="react stack" />
+            </div>
+            <div class="stack-item">
+              <img src="./images/vector-stack.svg" alt="vektor stack" />
+            </div>
+            <div class="stack-item-last">
+              <img src="./images/bootstrap-stack.svg" alt="bootstrap stack" />
+            </div>
+          </div>
+          <div class="container-btn">
+            <div class="stack-item">
+              <img src="./images/tailwind-stack.svg" alt="tailwild stack" />
+            </div>
+            <div class="stack-item">
+              <img src="./images/sass-stack.svg" alt="sass stack" />
+            </div>
+            <div class="stack-item">
+              <img src="./images/git-stack.svg" alt="git stack" />
+            </div>
+            <div class="stack-item">
+              <img
+                src="./images/cib_greensock-stack.svg"
+                alt="cib greensock stack"
+              />
+            </div>
+            <div class="stack-item">
+              <img src="./images/vscode-statck.svg" alt="visual code icon" />
+            </div>
+            <div class="stack-item-last">
+              <img src="./images/github-statck.svg" alt="github statck" />
             </div>
           </div>
         </div>
