added project and question section

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <span class="lable-place">Sep 2021 - Dec 2021</span>
               </div>
             </div>
-            <div class="container-main-work-experience">
+            <div class="container-main-work-experience-last">
               <div class="left-container-main-work-experience">
                 <h3>SEO / SEM Specialist</h3>
                 <div class="div-block">
@@ -184,7 +184,7 @@
         </div>
       </section>
       <section class="tech-stack container">
-        <div class="about-me container">
+        <div class="container">
           <h2 class="paragraph-center">My Tech Stack</h2>
           <h3 class="descr-tech-stack">
             Technologies I’ve been working with recently
@@ -236,6 +236,221 @@
           </div>
         </div>
       </section>
+      <section class="project container">
+        <div class="about-me container">
+          <h2 class="paragraph-center">Projects</h2>
+          <h3 class="descr-tech-stack">Things I’ve built so far</h3>
+        </div>
+        <div class="project-list-container container">
+          <div class="top-project-container">
+            <div class="project-iten">
+              <img src="./images/rectangle_1.png" alt="rectangle project" />
+              <div class="container-description">
+                <h2 class="project-name">Project Tile goes here</h2>
+                <p class="project-description">
+                  This is sample project description random things are here in
+                  description This is sample project lorem ipsum generator for
+                  dummy content
+                </p>
+                <br />
+                <p class="list-hard">
+                  <span class="list-hard-lable">Tech stack:</span> HTML ,
+                  JavaScript, SASS, React
+                </p>
+                <br />
+                <div class="links-projects">
+                  <div class="link-project-container">
+                    <img
+                      src="./images/akar-icons_link-chain.svg"
+                      alt="project 1"
+                    />
+                    <a class="link-name" href="#">Live Preview</a>
+                  </div>
+                  <div class="link-project-container">
+                    <img
+                      src="./images/akar-icons_github-fill.svg"
+                      alt="akar icon"
+                    />
+                    <a class="link-name" href="#">View Code</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="project-iten">
+              <img src="./images/rectangle_2.png" alt="rectangle project 2" />
+              <div class="container-description">
+                <h2 class="project-name">Project Tile goes here</h2>
+                <p class="project-description">
+                  This is sample project description random things are here in
+                  description This is sample project lorem ipsum generator for
+                  dummy content
+                </p>
+                <br />
+                <p class="list-hard">
+                  <span class="list-hard-lable">Tech stack:</span> HTML ,
+                  JavaScript, SASS, React
+                </p>
+                <br />
+                <div class="links-projects">
+                  <div class="link-project-container">
+                    <img
+                      src="./images/akar-icons_link-chain.svg"
+                      alt="project 1"
+                    />
+                    <a class="link-name" href="#">Live Preview</a>
+                  </div>
+                  <div class="link-project-container">
+                    <img
+                      src="./images/akar-icons_github-fill.svg"
+                      alt="akar icon"
+                    />
+                    <a class="link-name" href="#">View Code</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="project-iten-last">
+              <img src="./images/rectangle_3.png" alt="rectangle project 3" />
+              <div class="container-description">
+                <h2 class="project-name">Project Tile goes here</h2>
+                <p class="project-description">
+                  This is sample project description random things are here in
+                  description This is sample project lorem ipsum generator for
+                  dummy content
+                </p>
+                <br />
+                <p class="list-hard">
+                  <span class="list-hard-lable">Tech stack:</span> HTML ,
+                  JavaScript, SASS, React
+                </p>
+                <br />
+                <div class="links-projects">
+                  <div class="link-project-container">
+                    <img
+                      src="./images/akar-icons_link-chain.svg"
+                      alt="project 1"
+                    />
+                    <a class="link-name" href="#">Live Preview</a>
+                  </div>
+                  <div class="link-project-container">
+                    <img
+                      src="./images/akar-icons_github-fill.svg"
+                      alt="akar icon"
+                    />
+                    <a class="link-name" href="#">View Code</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="btn-project-container">
+            <div class="project-iten">
+              <img src="./images/rectangle_4.png" alt="rectangle project 4" />
+              <div class="container-description">
+                <h2 class="project-name">Project Tile goes here</h2>
+                <p class="project-description">
+                  This is sample project description random things are here in
+                  description This is sample project lorem ipsum generator for
+                  dummy content
+                </p>
+                <br />
+                <p class="list-hard">
+                  <span class="list-hard-lable">Tech stack:</span> HTML ,
+                  JavaScript, SASS, React
+                </p>
+                <br />
+                <div class="links-projects">
+                  <div class="link-project-container">
+                    <img
+                      src="./images/akar-icons_link-chain.svg"
+                      alt="project 1"
+                    />
+                    <a class="link-name" href="#">Live Preview</a>
+                  </div>
+                  <div class="link-project-container">
+                    <img
+                      src="./images/akar-icons_github-fill.svg"
+                      alt="akar icon"
+                    />
+                    <a class="link-name" href="#">View Code</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="project-iten">
+              <img src="./images/rectangle_5.png" alt="rectangle project 5" />
+              <div class="container-description">
+                <h2 class="project-name">Project Tile goes here</h2>
+                <p class="project-description">
+                  This is sample project description random things are here in
+                  description This is sample project lorem ipsum generator for
+                  dummy content
+                </p>
+                <br />
+                <p class="list-hard">
+                  <span class="list-hard-lable">Tech stack:</span> HTML ,
+                  JavaScript, SASS, React
+                </p>
+                <br />
+                <div class="links-projects">
+                  <div class="link-project-container">
+                    <img
+                      src="./images/akar-icons_link-chain.svg"
+                      alt="project 1"
+                    />
+                    <a class="link-name" href="#">Live Preview</a>
+                  </div>
+                  <div class="link-project-container">
+                    <img
+                      src="./images/akar-icons_github-fill.svg"
+                      alt="akar icon"
+                    />
+                    <a class="link-name" href="#">View Code</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="project-iten-last">
+              <img src="./images/rectangle_6.png" alt="rectangle project 6" />
+              <div class="container-description">
+                <h2 class="project-name">Project Tile goes here</h2>
+                <p class="project-description">
+                  This is sample project description random things are here in
+                  description This is sample project lorem ipsum generator for
+                  dummy content
+                </p>
+                <br />
+                <p class="list-hard">
+                  <span class="list-hard-lable">Tech stack:</span> HTML ,
+                  JavaScript, SASS, React
+                </p>
+                <br />
+                <div class="links-projects">
+                  <div class="link-project-container">
+                    <img
+                      src="./images/akar-icons_link-chain.svg"
+                      alt="project 1"
+                    />
+                    <a class="link-name" href="#">Live Preview</a>
+                  </div>
+                  <div class="link-project-container">
+                    <img
+                      src="./images/akar-icons_github-fill.svg"
+                      alt="akar icon"
+                    />
+                    <a class="link-name" href="#">View Code</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="questions container">
+        <h2 class="question-lable">For any questions please mail us:</h2>
+        <p class="question-mail-lable">hi@pavanmg.in</p>
+      </section>
+      <footer class="container"></footer>
     </main>
   </body>
 </html>
