--- a/index.html
+++ b/index.html
@@ -450,7 +450,47 @@
         <h2 class="question-lable">For any questions please mail us:</h2>
         <p class="question-mail-lable">hi@pavanmg.in</p>
       </section>
-      <footer class="container"></footer>
     </main>
+    <footer class="container">
+      <div class="top-footer">
+        <div class="logo-footer-cont">
+          <img src="./images/logo-footer.svg" alt="logo footer" />
+        </div>
+        <div class="contact-footer-cont">
+          <div class="phone">+91 12345 09876</div>
+          <div class="email">info@example.com</div>
+          <div class="icon-footer-cont">
+            <ul class="iteam-list-footer">
+              <li class="iteam-icon-footer">
+                <img src="./images/github-footer.svg" alt="github footer" />
+              </li>
+              <li class="iteam-icon-footer">
+                <img src="./images/twitter-footer.svg" alt="twitter footer" />
+              </li>
+              <li>
+                <img src="./images/linkedin-footer.svg" alt="linkedin footer" />
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="btn-footer">
+        <div class="fotter-menu">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Technologies</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Contacts</a></li>
+          </ul>
+        </div>
+        <div class="sign-footer">
+          <p>Designed and built by
+          <span class="sign-text">Pavan MG</span> with
+          <span class="sign-text">Love & Coffee</span>
+          </p>
+        </divsign-footer>
+      </div>
+    </footer>
   </body>
 </html>
