optim till 420px

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <div class="container header_flex">
+      <div class="main-header container header_flex">
         <div class="logo-block">
           <img src="./images/logo_top.svg" alt="logo" />
         </div>
@@ -47,7 +47,7 @@
                     alt="twitter logo"
                 /></a>
               </li>
-              <li>
+              <li class="feedback-icons-last">
                 <a href="#"
                   ><img
                     class="icon-feedback"
@@ -61,7 +61,7 @@
       </div>
     </header>
     <main class="main-block">
-      <section class="container header_flex">
+      <section class="container header_flex block">
         <div class="name">
           <p>Hi &#128075;,</p>
           <p>My name is</p>
@@ -89,7 +89,7 @@
         <div>
           <h2 class="paragraph">Work Experience</h2>
           <div class="description-about-me-container">
-            <div class="container-main-work-experience">
+            <div class="container-main-work-experience block">
               <div class="left-container-main-work-experience">
                 <h3>Junior Web Developer</h3>
                 <div class="div-block">
@@ -110,7 +110,7 @@
                 <span class="lable-place">Sep 2021 - Dec 2021</span>
               </div>
             </div>
-            <div class="container-main-work-experience">
+            <div class="container-main-work-experience block">
               <div class="left-container-main-work-experience">
                 <h3>Web Development Intern</h3>
                 <div class="div-block">
@@ -131,7 +131,7 @@
                 <span class="lable-place">Sep 2021 - Dec 2021</span>
               </div>
             </div>
-            <div class="container-main-work-experience-last">
+            <div class="container-main-work-experience-last block">
               <div class="left-container-main-work-experience">
                 <h3>SEO / SEM Specialist</h3>
                 <div class="div-block">
@@ -159,7 +159,7 @@
         <div>
           <h2 class="paragraph">Education</h2>
           <div class="description-about-me-container">
-            <div class="container-main-work-experience education-inner">
+            <div class="container-main-work-experience education-inner block">
               <div class="left-container-main-work-experience">
                 <h3>Bachelor in Electronics & Communication</h3>
                 <div class="div-block">
