--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
           <img src="./images/logo_top.svg" alt="logo" />
         </div>
         <div class="menu-feedback-container">
-          <nav>
+          <nav class="nav-menu" id="navmenu">
+            <i class="fa-solid fa-bars" id="bars"></i>
             <ul class="menu-list">
-              <li class="menu-item">Home</li>
-              <li>About</li>
-              <li>Tech Stack</li>
-              <li>Projects</li>
-              <li>Contact</li>
+              <li class="menu-item"><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Tech Stack</a></li>
+              <li><a href="#">Projects</a></li>
+              <li><a href="#">Contact</a></li>
             </ul>
           </nav>
           <div>
@@ -492,5 +493,8 @@
         </divsign-footer>
       </div>
     </footer>
+
+    <script src="./script/main.js"></script>
+    <script src="https://kit.fontawesome.com/ce6be2d7f2.js" crossorigin="anonymous"></script>
   </body>
 </html>
