added dark mode

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style/main.css" />
+    <link rel="stylesheet" href="./style/test.css" />
   </head>
   <body>
     <header>
@@ -58,6 +59,14 @@
               </li>
             </ul>
           </div>
+        </div>
+        <div class="dark-mode-container">
+          <img
+            class="dark-mode-container-icons"
+            id="moon_icon"
+            src="./images/moon-outline.svg"
+            alt="moon-ouline icon"
+          />
         </div>
       </div>
     </header>
@@ -486,15 +495,17 @@
           </ul>
         </div>
         <div class="sign-footer">
-          <p>Designed and built by
-          <span class="sign-text">Pavan MG</span> with
-          <span class="sign-text">Love & Coffee</span>
+          <p>
+            Designed and built by <span class="sign-text">Pavan MG</span> with
+            <span class="sign-text">Love & Coffee</span>
           </p>
-        </divsign-footer>
+        </div>
       </div>
     </footer>
-
     <script src="./script/main.js"></script>
-    <script src="https://kit.fontawesome.com/ce6be2d7f2.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/ce6be2d7f2.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
