added color text for dark mode

--- a/index.html
+++ b/index.html
@@ -486,16 +486,16 @@
       </div>
       <div class="btn-footer">
         <div class="fotter-menu">
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Technologies</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contacts</a></li>
+          <ul class="fotter-menu-list">
+            <li class="fotter-menu-list-item"><a href="#">Home</a></li>
+            <li class="fotter-menu-list-item"><a href="#">About</a></li>
+            <li class="fotter-menu-list-item"><a href="#">Technologies</a></li>
+            <li class="fotter-menu-list-item"><a href="#">Projects</a></li>
+            <li class="fotter-menu-list-item"><a href="#">Contacts</a></li>
           </ul>
         </div>
         <div class="sign-footer">
-          <p>
+          <p class="sign-footer-p">
             Designed and built by <span class="sign-text">Pavan MG</span> with
             <span class="sign-text">Love & Coffee</span>
           </p>
