--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resume</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500&family=Poppins:wght@300;400;500;700&display=swap"
       rel="stylesheet"
-    />
+    /> -->
     <link rel="stylesheet" href="./style/main.css" />
-    <link rel="stylesheet" href="./style/test.css" />
   </head>
   <body>
     <header>
@@ -24,10 +23,10 @@
             <i class="fa-solid fa-bars" id="bars"></i>
             <ul class="menu-list">
               <li class="menu-item"><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Tech Stack</a></li>
-              <li><a href="#">Projects</a></li>
-              <li><a href="#">Contact</a></li>
+              <li class="menu-item"><a href="#">About</a></li>
+              <li class="menu-item"><a href="#">Tech Stack</a></li>
+              <li class="menu-item"><a href="#">Projects</a></li>
+              <li class="menu-item"><a href="#">Contact</a></li>
             </ul>
           </nav>
           <div>
