--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resume</title>
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500&family=Poppins:wght@300;400;500;700&display=swap"
-      rel="stylesheet"
-    /> -->
     <link rel="stylesheet" href="./style/main.css" />
   </head>
   <body>
@@ -35,7 +29,7 @@
                 <a href="#">
                   <img
                     class="icon-feedback"
-                    src="./images/github-topr.svg"
+                    src="./images/github-top.svg"
                     alt="github logo"
                   />
                 </a>
@@ -232,7 +226,8 @@
             </div>
             <div class="stack-item">
               <img
-                src="./images/cib_greensock-stack.svg"
+                id="cib_greensock-icon"
+                src="./images/cib_greensock-stack-light.svg"
                 alt="cib greensock stack"
               />
             </div>
@@ -240,7 +235,11 @@
               <img src="./images/vscode-statck.svg" alt="visual code icon" />
             </div>
             <div class="stack-item-last">
-              <img src="./images/github-statck.svg" alt="github statck" />
+              <img
+                id="github-icon"
+                src="./images/github-statck-light.svg"
+                alt="github statck"
+              />
             </div>
           </div>
         </div>
@@ -270,14 +269,16 @@
                 <div class="links-projects">
                   <div class="link-project-container">
                     <img
-                      src="./images/akar-icons_link-chain.svg"
+                      class="akar-clip-icon"
+                      src="./images/akar-icons_link-chain-light.svg"
                       alt="project 1"
                     />
                     <a class="link-name" href="#">Live Preview</a>
                   </div>
                   <div class="link-project-container">
                     <img
-                      src="./images/akar-icons_github-fill.svg"
+                      class="akar-github-icon"
+                      src="./images/akar-icons_github-fill-light.svg"
                       alt="akar icon"
                     />
                     <a class="link-name" href="#">View Code</a>
@@ -303,14 +304,16 @@
                 <div class="links-projects">
                   <div class="link-project-container">
                     <img
-                      src="./images/akar-icons_link-chain.svg"
+                      class="akar-clip-icon"
+                      src="./images/akar-icons_link-chain-light.svg"
                       alt="project 1"
                     />
                     <a class="link-name" href="#">Live Preview</a>
                   </div>
                   <div class="link-project-container">
                     <img
-                      src="./images/akar-icons_github-fill.svg"
+                      class="akar-github-icon"
+                      src="./images/akar-icons_github-fill-light.svg"
                       alt="akar icon"
                     />
                     <a class="link-name" href="#">View Code</a>
@@ -336,14 +339,16 @@
                 <div class="links-projects">
                   <div class="link-project-container">
                     <img
-                      src="./images/akar-icons_link-chain.svg"
+                      class="akar-clip-icon"
+                      src="./images/akar-icons_link-chain-light.svg"
                       alt="project 1"
                     />
                     <a class="link-name" href="#">Live Preview</a>
                   </div>
                   <div class="link-project-container">
                     <img
-                      src="./images/akar-icons_github-fill.svg"
+                      class="akar-github-icon"
+                      src="./images/akar-icons_github-fill-light.svg"
                       alt="akar icon"
                     />
                     <a class="link-name" href="#">View Code</a>
@@ -371,14 +376,16 @@
                 <div class="links-projects">
                   <div class="link-project-container">
                     <img
-                      src="./images/akar-icons_link-chain.svg"
+                      class="akar-clip-icon"
+                      src="./images/akar-icons_link-chain-light.svg"
                       alt="project 1"
                     />
                     <a class="link-name" href="#">Live Preview</a>
                   </div>
                   <div class="link-project-container">
                     <img
-                      src="./images/akar-icons_github-fill.svg"
+                      class="akar-github-icon"
+                      src="./images/akar-icons_github-fill-light.svg"
                       alt="akar icon"
                     />
                     <a class="link-name" href="#">View Code</a>
@@ -404,14 +411,16 @@
                 <div class="links-projects">
                   <div class="link-project-container">
                     <img
-                      src="./images/akar-icons_link-chain.svg"
+                      class="akar-clip-icon"
+                      src="./images/akar-icons_link-chain-light.svg"
                       alt="project 1"
                     />
                     <a class="link-name" href="#">Live Preview</a>
                   </div>
                   <div class="link-project-container">
                     <img
-                      src="./images/akar-icons_github-fill.svg"
+                      class="akar-github-icon"
+                      src="./images/akar-icons_github-fill-light.svg"
                       alt="akar icon"
                     />
                     <a class="link-name" href="#">View Code</a>
@@ -437,14 +446,16 @@
                 <div class="links-projects">
                   <div class="link-project-container">
                     <img
-                      src="./images/akar-icons_link-chain.svg"
+                      class="akar-clip-icon"
+                      src="./images/akar-icons_link-chain-light.svg"
                       alt="project 1"
                     />
                     <a class="link-name" href="#">Live Preview</a>
                   </div>
                   <div class="link-project-container">
                     <img
-                      src="./images/akar-icons_github-fill.svg"
+                      class="akar-github-icon"
+                      src="./images/akar-icons_github-fill-light.svg"
                       alt="akar icon"
                     />
                     <a class="link-name" href="#">View Code</a>
@@ -463,7 +474,11 @@
     <footer class="container">
       <div class="top-footer">
         <div class="logo-footer-cont">
-          <img src="./images/logo-footer.svg" alt="logo footer" />
+          <img
+            id="logo-footer-icon"
+            src="./images/logo-footer-light.svg"
+            alt="logo footer"
+          />
         </div>
         <div class="contact-footer-cont">
           <div class="phone">+91 12345 09876</div>
@@ -471,13 +486,25 @@
           <div class="icon-footer-cont">
             <ul class="iteam-list-footer">
               <li class="iteam-icon-footer">
-                <img src="./images/github-footer.svg" alt="github footer" />
+                <img
+                  id="github-footer-icon"
+                  src="./images/github-footer.svg"
+                  alt="github footer"
+                />
               </li>
               <li class="iteam-icon-footer">
-                <img src="./images/twitter-footer.svg" alt="twitter footer" />
+                <img
+                  id="twitter-footer-icon"
+                  src="./images/twitter-footer.svg"
+                  alt="twitter footer"
+                />
               </li>
               <li>
-                <img src="./images/linkedin-footer.svg" alt="linkedin footer" />
+                <img
+                  id="linkedin-footer-icon"
+                  src="./images/linkedin-footer.svg"
+                  alt="linkedin footer"
+                />
               </li>
             </ul>
           </div>
