fixed posittion in header

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     alt="twitter logo"
                 /></a>
               </li>
-              <li class="feedback-icons-last">
+              <li>
                 <a href="#"
                   ><img
                     class="icon-feedback"
@@ -50,16 +50,18 @@
                     alt="linkedin logo"
                 /></a>
               </li>
+              <li>
+                <div class="feedback-icons-last dark-mode-container">
+                  <img
+                    class="dark-mode-container-icons"
+                    id="moon_icon"
+                    src="./images/moon-outline.svg"
+                    alt="moon-ouline icon"
+                  />
+                </div>
+              </li>
             </ul>
           </div>
-        </div>
-        <div class="dark-mode-container">
-          <img
-            class="dark-mode-container-icons"
-            id="moon_icon"
-            src="./images/moon-outline.svg"
-            alt="moon-ouline icon"
-          />
         </div>
       </div>
     </header>
@@ -77,7 +79,7 @@
           <img src="./images/my-photo.png" alt="my photo" />
         </div>
       </section>
-      <section class="about-me container header_flex">
+      <section class="about-me container">
         <div class="description-about-me-container">
           <h2 class="paragraph">About Me</h2>
           <p>
