--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             Technologies I’ve been working with recently
           </h3>
         </div>
-        <div class="main-stack-icon-container">
+        <div class="main-stack-icon-container container">
           <div class="container-top">
             <div class="stack-item">
               <img src="./images/html-stack.svg" alt="html stack" />
@@ -323,7 +323,7 @@
                 </div>
               </div>
             </div>
-            <div class="project-iten-last">
+            <div class="project-iten">
               <img src="./images/rectangle_3.png" alt="rectangle project 3" />
               <div class="container-description">
                 <h2 class="project-name">Project Tile goes here</h2>
@@ -430,7 +430,7 @@
                 </div>
               </div>
             </div>
-            <div class="project-iten-last">
+            <div class="project-iten">
               <img src="./images/rectangle_6.png" alt="rectangle project 6" />
               <div class="container-description">
                 <h2 class="project-name">Project Tile goes here</h2>
