fixed tech stack container

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </p>
         </div>
       </section>
-      <section class="work-exp container header_flex">
+      <section class="work-exp container">
         <div>
           <h2 class="paragraph">Work Experience</h2>
           <div class="description-about-me-container">
@@ -136,7 +136,7 @@
                 <span class="lable-place">Sep 2021 - Dec 2021</span>
               </div>
             </div>
-            <div class="container-main-work-experience-last block">
+            <div class="container-main-work-experience block">
               <div class="left-container-main-work-experience">
                 <h3>SEO / SEM Specialist</h3>
                 <div class="div-block">
@@ -160,11 +160,13 @@
           </div>
         </div>
       </section>
-      <section class="enducation container header_flex">
+      <section class="enducation container">
         <div>
           <h2 class="paragraph">Education</h2>
-          <div class="description-about-me-container">
-            <div class="container-main-work-experience education-inner block">
+          <div class="enducation-container">
+            <div
+              class="container-main-work-experience education-inner block description-about-me-container"
+            >
               <div class="left-container-main-work-experience">
                 <h3>Bachelor in Electronics & Communication</h3>
                 <div class="div-block">
@@ -196,53 +198,49 @@
           </h3>
         </div>
         <div class="main-stack-icon-container container">
-          <div class="container-top">
-            <div class="stack-item">
-              <img src="./images/html-stack.svg" alt="html stack" />
-            </div>
-            <div class="stack-item">
-              <img src="./images/css-stack.svg" alt="css stack" />
-            </div>
-            <div class="stack-item">
-              <img src="./images/js-stack.svg" alt="java script stack" />
-            </div>
-            <div class="stack-item">
-              <img src="./images/react-stack.svg" alt="react stack" />
-            </div>
-            <div class="stack-item">
-              <img src="./images/vector-stack.svg" alt="vektor stack" />
-            </div>
-            <div class="stack-item-last">
-              <img src="./images/bootstrap-stack.svg" alt="bootstrap stack" />
-            </div>
+          <div class="stack-item">
+            <img src="./images/html-stack.svg" alt="html stack" />
           </div>
-          <div class="container-btn">
-            <div class="stack-item">
-              <img src="./images/tailwind-stack.svg" alt="tailwild stack" />
-            </div>
-            <div class="stack-item">
-              <img src="./images/sass-stack.svg" alt="sass stack" />
-            </div>
-            <div class="stack-item">
-              <img src="./images/git-stack.svg" alt="git stack" />
-            </div>
-            <div class="stack-item">
-              <img
-                id="cib_greensock-icon"
-                src="./images/cib_greensock-stack-light.svg"
-                alt="cib greensock stack"
-              />
-            </div>
-            <div class="stack-item">
-              <img src="./images/vscode-statck.svg" alt="visual code icon" />
-            </div>
-            <div class="stack-item-last">
-              <img
-                id="github-icon"
-                src="./images/github-statck-light.svg"
-                alt="github statck"
-              />
-            </div>
+          <div class="stack-item">
+            <img src="./images/css-stack.svg" alt="css stack" />
+          </div>
+          <div class="stack-item">
+            <img src="./images/js-stack.svg" alt="java script stack" />
+          </div>
+          <div class="stack-item">
+            <img src="./images/react-stack.svg" alt="react stack" />
+          </div>
+          <div class="stack-item">
+            <img src="./images/vector-stack.svg" alt="vektor stack" />
+          </div>
+          <div class="stack-item">
+            <img src="./images/bootstrap-stack.svg" alt="bootstrap stack" />
+          </div>
+          <div class="stack-item">
+            <img src="./images/tailwind-stack.svg" alt="tailwild stack" />
+          </div>
+          <div class="stack-item">
+            <img src="./images/sass-stack.svg" alt="sass stack" />
+          </div>
+          <div class="stack-item">
+            <img src="./images/git-stack.svg" alt="git stack" />
+          </div>
+          <div class="stack-item">
+            <img
+              id="cib_greensock-icon"
+              src="./images/cib_greensock-stack-light.svg"
+              alt="cib greensock stack"
+            />
+          </div>
+          <div class="stack-item">
+            <img src="./images/vscode-statck.svg" alt="visual code icon" />
+          </div>
+          <div class="stack-item">
+            <img
+              id="github-icon"
+              src="./images/github-statck-light.svg"
+              alt="github statck"
+            />
           </div>
         </div>
       </section>
