--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </nav>
           <div>
             <ul class="feedback-icons">
-              <li>
+              <li class="feedback-icons-item">
                 <a href="#">
                   <img
                     class="icon-feedback"
@@ -34,7 +34,7 @@
                   />
                 </a>
               </li>
-              <li>
+              <li class="feedback-icons-item">
                 <a href="#"
                   ><img
                     class="icon-feedback"
@@ -42,7 +42,7 @@
                     alt="twitter logo"
                 /></a>
               </li>
-              <li>
+              <li class="feedback-icons-item">
                 <a href="#"
                   ><img
                     class="icon-feedback"
